--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -7,7 +7,7 @@
      runs-on: ubuntu-latest
      steps:
 -      - uses: actions/checkout@v1
--      - uses: ./action-a
+-      - uses: 
 -        with:
 -          MY_NAME: "Mona"
 +      - name: "Mona"
